service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-svc
spec:
  type: NodePort
  ports:
  - port: 31111
    protocol: TCP
    targetPort: 3000
    nodePort: 31111
  selector:
    project: kubernetes-project
